k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tusky-docs
  labels:
    app: tusky-docs
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: tusky-docs
